agruihalgiwergh never gonna finish

--- a/src/slides/0_intro.mdx
+++ b/src/slides/0_intro.mdx
@@ -30,7 +30,8 @@ import AmazonLogo from '../img/amazonlogo.png'
 </Heading>
 </Box>
 <Text fontFamily="monospace">ION SPECIAL EDITION</Text>
-
+<Text fontFamily="monospace">Full Presentation:<a href="https://jon-e.net/infrastructure-presentation">https://jon-e.net/infrastructure-presentation</a></Text>
+<Text fontFamily="monospace">Video of full Presentation: <a href={"https://vimeo.com/589991175"}>https://vimeo.com/589991175</a></Text>
 <Text>Jonny Saunders, 2021</Text>
 
 <Box width={2/3} margin={'40px 0'}>
