--- a/src/slides/2_tools.mdx
+++ b/src/slides/2_tools.mdx
@@ -74,6 +74,18 @@ import Datajoint from '../components/fragments/datajoint';
   Universal Data Sharing
 </PositionedHeading>
 
+---
+
+- Analysis and Tools are on either side of the data
+- no time to go into great detail here, so focus on lessons for how people should approach tools
+  and comparison to current practice
+- input and output
+- reward for participating (free dope SOTA analysis),
+- lowering barriers to access the system (experimental tool funnels data directly into the p2p system)
+- Pacific Research Platform
+- Autopilot
+- comparison to other types of tools ("a high throughput platform for" that can't be built by anyone else,
+  had to rebuild a bunch of its infrastructure, integratable (use networking modules, hardware, ))
 
 ---
 
