--- a/src/slides/2_tools.mdx
+++ b/src/slides/2_tools.mdx
@@ -82,7 +82,7 @@ import Datajoint from '../components/fragments/datajoint';
 - input and output
 - reward for participating (free dope SOTA analysis),
 - lowering barriers to access the system (experimental tool funnels data directly into the p2p system)
-- Pacific Research Platform
+- Pacific Research Platform - https://prp.lsmarr.net/nautilus-cluster-map/
 - Autopilot
 - comparison to other types of tools ("a high throughput platform for" that can't be built by anyone else,
   had to rebuild a bunch of its infrastructure, integratable (use networking modules, hardware, ))
