--- a/src/slides/3_knowledge.mdx
+++ b/src/slides/3_knowledge.mdx
@@ -16,155 +16,7 @@ import SemanticEg from '../img/semantic_1-01.svg'
 import Overview from '../img/overview-01.svg'
 import {PositionedHeading} from '../components/basic';
 
-# What's missing?
-
-We still need a way to...
-* find and link data
-* resolve schema/format conflicts
-* find, compare, and share analysis pipelines
-* share technical knowledge
-* assign credit for invisible scientific labor
-* collectively govern the creation & operation of our tools
-
-# We need community & communication systems
-
-We can learn from two of the largest decentralized knowledge communities:
-
-Internet Pirates
-
-Wikipedia
-
-
----
-
-<Grid gridTemplateColumns={"2fr 1fr"}>
-  <FlexBox flexDirection={'column'} alignItems={'flex-start'}>
-    <Heading>What.cd</Heading>...
-    <Text textAlign={'left'}>How did A Private Bittorrent Tracker,</Text>
-    <Text textAlign={'left'}>Created and Curated by entirely anonymous users</Text>
-    <Text textAlign={'left'}>With no money or special training</Text>
-    <Text textAlign={'left'}>Become the most complete archive of music in human history?</Text>
-    <VerticalLinearStepper
-        steps={[
-          {
-            title: 'Explicit Structure & Ratio Rules',
-            body: 'Strong incentives for uploading and curating',
-          },
-          {
-            title: 'Affordances for Collective Curation',
-            body: 'clear tools and guides for how to use all parts of the site, means for reporting/discussing changes, tagging, collections',
-          },
-          {
-            title: 'A Sense of Shared Ownership',
-            body: 'lots of places where your contributions were credited, extensive forums, discussions, collections, vanity house, album of the week',
-          },
-          {
-            title: 'System Design Allows Iteration',
-            body: 'Separation of interface from database allowed private torrent trackers to innovate on community structure for decades',
-          },
-        ]}
-    />
-  </FlexBox>
-  <FlexBox>
-  <Image src={WhatKanye}/>
-  </FlexBox>
-</Grid>
-
----
-
-<Box width={2/3} marginLeft={'auto'} marginRight={'auto'} height={"100%"}>
-  <Heading textAlign={'left'} lineHeight={1}>
-    Before Wikipedia...
-  </Heading>
-    <Heading fontSize={'h3'} textAlign={'left'} color={"tools"} fontWeight={200} fontStyle={"italic"}>
-      there were meatball wikis
-    </Heading>
-  <Text fontFamily={"Source Serif Pro"} fontSize={30}>Early experiments in radically decentralized control over the technology of communities</Text>
-  <Box flexDirection={'column'} height={"100%"}>
-    <IFrame paper={false} flexGrow={4} src={"http://meatballwiki.org/wiki/StartingPoints"}/>
-  </Box>
-</Box>
-
----
-
-<Heading textAlign={'left'} lineHeight={1}>
-Wikipedia itself...
-</Heading>
-
-<Heading fontSize={'h3'} textAlign={'left'} color={"tools"} fontWeight={200} fontStyle={"italic"}>
-How do we organize all knowledge together?
-</Heading>
-
-<Text>Hub-and-spoke "WikiProjects"</Text>
-
-<Grid height={"100%"} gridTemplateColumns={"1fr 1fr"} gridColumnGap={"30px"}>
-    <IFrame paper={false} flexGrow={4} src={"https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Council/Directory"}/>
-    <Appear stepIndex={1} id={"meatballappear"}>
-      <Quote fontSize={"2em"} fontFamily={"Source Serif Pro"} fontWeight={200} fontStyle={"italic"}>
-        the true power of wikis lies in the fact that they are a platform that <strong style={{fontWeight:700}}>provides affordances
-        which allow for a wide variety of rich, multifaceted organizational structures.</strong> [...]<br/>
-        "Providing tools and infrastructure mechanisms that support
-        the development and management of policies
-        is an important part of creating social computing systems
-        that work."<br/>
-      </Quote>
-      <Text fontSize={30}>-Butler, Joyce, & Pike (2008)
-        <Link fontSize={30} href={"https://doi.org/10.1145/1357054.1357227"}>
-          "Don't Look Now, But We've Created a Bureaucracy: The Nature and Roles of Policies and Rules in Wikipedia"</Link></Text>
-      </Appear>
-</Grid>
-
-
-Notes: cite butlerDonLookNow2008
-
-Screenshot of wikipedia consensus flowchart?
-
----
-
-<Box width={2/3} marginLeft={'auto'} marginRight={'auto'} height={"100%"}>
-  <Heading textAlign={'left'} lineHeight={1}>
-    Archives need communities
-  </Heading>
-  <Heading fontSize={'h3'} textAlign={'left'} color={"tools"} fontWeight={200} fontStyle={"italic"}>
-    Lessons from Pirates & Wikis
-  </Heading>
-  <VerticalLinearStepper
-      steps={[
-        {
-          title: 'Federated System Design',
-          body: 'Separation of interface from database allowed private torrent trackers to innovate on community structure for decades',
-        },
-        {
-          title: 'Explicit Structure: Rules & Processes',
-          body: 'Strong incentives for uploading and curating',
-        },
-        {
-          title: '(Uncoercive) Incentives & Credit Assignment',
-          body: 'Strong incentives for uploading and curating',
-        },
-        {
-          title: 'Community Control',
-          body: 'clear tools and guides for how to use all parts of the site, means for reporting/discussing changes, tagging, collections',
-        },
-        {
-          title: 'UX Tools that meet Communal Needs',
-          body: 'clear tools and guides for how to use all parts of the site, means for reporting/discussing changes, tagging, collections',
-        },
-        {
-          title: 'Healthy Norms & Moderation',
-          body: 'lots of places where your contributions were credited, extensive forums, discussions, collections, vanity house, album of the week',
-        }
-      ]}
-  />
-</Box>
-
-
-
-
-
----
-
-# The Semantic Web
+# The Semantic Web (& Linked Data)
 
 <Box width={2/3} marginRight={'auto'} marginLeft={'auto'}>
 <Quote  fontSize={"2em"} fontFamily={"Source Serif Pro"} fontWeight={200} fontStyle={"italic"}>
@@ -244,6 +96,43 @@ in ways never dreamed of by its creators.<br/>
 
 ---
 
+
+# Standardization is Political
+
+( ha i fooled ya on the "just assume standardization is easy" )
+
+<Box width={2/3} marginLeft={"auto"} marginRight={"auto"}>
+  <Text>The plan *can't* just be to try to get everyone to use the same thing</Text>
+  <Card elevation={1}>
+    <CardContent>
+      <Quote  fontSize={"2em"} fontFamily={"Source Serif Pro"} fontWeight={200} fontStyle={"italic"}>
+        Participants describe the individual sequence database
+        systems as if they were shadows, poor representations of a
+        widely-agreed-upon ideal. [...] Instead, <strong style={{fontWeight:700}}>each decision about the implementation of a particular
+        database system plants a stake for a community boundary.</strong>
+        The databases are not so much imperfect copies of an ideal as
+        they are arguments about what the ideal Database should be.
+        <br/><br/>
+        In the end, however, the system was so tailored to a specific
+        set of research questions that the collection of data,
+        the set of tools, and even the social organization of the
+        project had to be significantly changed. ...
+        <br/><br/>While the database development projects had begun by working
+        together, in the end they were unable to collaborate. <strong style={{fontWeight:700}}>The system
+        that was supposed to tie these groups together could not be
+        shielded from the controversies that formed the boundaries between
+        the communities of practice.</strong>
+      </Quote>
+      <Text fontSize={30}>-Bietz & Lee (2009)
+        <Link fontSize={30} href={"https://doi.org/10.1007/978-1-84882-854-4_15"}>
+          "Collaboration in Metagenomics"</Link></Text>
+    </CardContent>
+  </Card>
+</Box>
+
+
+---
+
 <Heading textAlign={'left'} color={"tools"} fontWeight={200} fontStyle={"italic"} fontSize={50}>
   Have you ever had a dream
 </Heading>
@@ -268,7 +157,7 @@ that you, um, you had, your, you you could, you’ll do, you could you, you want
 
 ---
 
-# Technical knowledge & Credit Assignment
+# Technical knowledge, Credit Assignment, and Multimodal Integration
 
 <Box width={2/3} marginLeft={'auto'} marginRight={'auto'} height={"100%"}>
   <Heading fontSize={'h3'} textAlign={'left'} color={"tools"} fontWeight={200} fontStyle={"italic"}>
@@ -278,21 +167,6 @@ that you, um, you had, your, you you could, you’ll do, you could you, you want
     <IFrame paper={false} flexGrow={4} src={"https://wiki.auto-pi-lot.com/index.php/Autopilot_Wiki"}/>
   </Box>
 </Box>
-
----
-
-<Box width={2/3} marginLeft={'auto'} marginRight={'auto'} height={"100%"}>
-  <Heading textAlign={'left'} lineHeight={1}>
-    Governance
-  </Heading>
-  <Heading fontSize={'h3'} textAlign={'left'} color={"tools"} fontWeight={200} fontStyle={"italic"}>
-    Eg. a Demo Wiki for the IBL - iblwiki.auto-pi-lot.com
-  </Heading>
-  <Box flexDirection={'column'} height={"100%"}>
-    <IFrame paper={false} flexGrow={4} src={"https://iblwiki.auto-pi-lot.com/"}/>
-  </Box>
-</Box>
-
 
 ---
 
