--- a/src/slides/4_conclusion.mdx
+++ b/src/slides/4_conclusion.mdx
@@ -53,6 +53,21 @@ Notes: whatnow
 ---
 
 
+<div className={'blankslide'}></div>
+
+Notes: Whose job is this?
+
+- Undirected open source developers?
+- Startups?
+- Institutes?
+- Formal Consortia?
+- Top-down NIH/NSF efforts?
+
+How about all of us? We're doing it anyway!!!
+
+---
+
+
 <Box width={2/3} margin={'auto'}>
   <Quote fontSize={"2em"} fontFamily={"Source Serif Pro"} fontWeight={200} fontStyle={"italic"}>
     It would be easy to make some sweeping recommendations about what should be done, especially by governments. But to be compatible with the goal of a participatory communication system, the methods should be participatory too. The following ideas are meant to encourage discussion.
